metadata/force-app/main/default/objects/CustomName_JIDhd__c/CustomName_JIDhd__c.object-meta.xml
<CustomObject>
    <description>Description_dlOGO</description>
    <label>CustomLabel_YGYSR</label>
    <nameField>
        <label>CustomLabel_YGYSR</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_YGYSRs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>