metadata/force-app/main/default/objects/CustomName_JIDhd__c/fields/CustomField_kIZmm__c.field-meta.xml
<CustomField>
    <fullName>CustomField_kIZmm__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldPVqbX</label>
    <length>255</length>
    <type>Text</type>
</CustomField>